# dezc-projects

./: .gitignore  LICENSE.md  README.md
01-docker-terraform/: homework.md
01-docker-terraform/docker-workshop/: README.md  docker-compose.yml  ingest_data.py  ingest_parquet.py  parquet.Dockerfile  pyproject.toml
01-docker-terraform/terraform-workshop/: main.tf  variables.tf
01-docker-terraform/workshop/: ingest_data.py  pyproject.toml
02-workflow-orchestration/: README.md  docker-compose.yml  homework.md
03-data-warehouse/: deploy.sh  homework.md
03-data-warehouse/serving_dir/tip_model/1/: fingerprint.pb  saved_model.pb
04-analytics-engineering/: README.md  dbt_project.yml  homework.md  load_zones.sh
04-analytics-engineering/flows/: fhv_ny.yml
04-analytics-engineering/models/: sources.yml
04-analytics-engineering/models/marts/: dim_fhv_trips.sql  dim_zones.sql  fct_fhv_monthly_zone_traveltime_p90.sql  fct_taxi_trips_monthly_fare_p95.sql  fct_taxi_trips_quarterly_revenue.sql  fct_trips.sql  schema.yml  sources.yml
04-analytics-engineering/models/staging/: sources.yml  stg_fhv.sql  stg_fhv_tripdata.sql  stg_green_tripdata.sql  stg_yellow_tripdata.sql
05-batch/: README.md
05-batch/code/: 05_taxi_schema.ipynb  07_groupby_join.ipynb  08_rdds.ipynb  09_spark_gcs.ipynb  cloud.md  first_look.ipynb  homework.ipynb  homework.md  run_script.sh  spark_sql_example.ipynb  spark_standalone.ipynb  spark_standalone.py
06-streaming/pyflink/: docker-compose.yml  homework.ipynb  homework.md  homework.py  notes.md  requirements.txt
(+9 files in other folders)
